--- a/index.html
+++ b/index.html
@@ -584,13 +584,13 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4 mx-auto text-center">
+        <div class="col-lg-3 mx-auto text-center">
           <img src="img/equipo/maqs.jpg" alt="" class="img-thumbnail rounded-circle">
           <i class="d-block text-secondary">Adelina Quispe</i>
           <i class="d-block text-secondary text-italic"> <small> Gerente general</small></i>
         </div>
 
-        <div class="col-lg-4 mx-auto my-auto text-center">
+        <div class="col-lg-3 mx-auto my-auto text-center">
           <img src="img/equipo/eacq.jpg" alt="" class="img-thumbnail rounded-circle">
           <i class="d-block text-secondary">Erik Chino</i>
           <i class="d-block text-secondary text-italic"> <small> Subgerente</small></i>
@@ -600,19 +600,19 @@
 
 
        <div class="row">
-        <div class="col-lg-3 mx-auto text-center">
+        <div class="col-lg-2 mx-auto text-center">
           <img src="img/equipo/ang.jpg" alt="" class="img-thumbnail rounded-circle">
           <i class="d-block text-secondary">Angel Solano</i>
           <i class="d-block text-secondary text-italic"> <small> Toldero</small></i>
         </div>      
 
-        <div class="col-lg-3 mx-auto text-center">
+        <div class="col-lg-2 mx-auto text-center">
           <img src="img/equipo/mm.jpg" alt="" class="img-thumbnail rounded-circle">
           <i class="d-block text-secondary">Medardo Merino</i>
           <i class="d-block text-secondary text-italic"> <small> Chofer toldero</small></i>
         </div> 
 
-        <div class="col-lg-3 mx-auto text-center">
+        <div class="col-lg-2 mx-auto text-center">
           <img src="img/equipo/efra.jpg" alt="" class="img-thumbnail rounded-circle">
           <i class="d-block text-secondary">Efraín Arias</i>
           <i class="d-block text-secondary text-italic"> <small> Toldero</small></i>
@@ -620,8 +620,8 @@
       </div> <hr> <br>
 
       <div class="row">
-        <div class="col-lg-5 mx-auto text-center">
-          <img src="img/equipo/dev.jpg" alt="" class="img-thumbnail rounded-circle">
+        <div class="col-lg-4 mx-auto text-center">
+          <img src="img/equipo/dev.jpg" alt="" class="img-thumbnail rounded">
           <i class="d-block text-secondary">Geral R Cotrina</i>
           <i class="d-block text-secondary text-italic"> <small> Colaborador</small></i>
         </div>     
