--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 
       <div class="row">
         <div class="col-lg-5 mx-auto text-center">
-          <img src="img/equipo/dev.jpg" alt="" class="img-thumbnail rounded-circle">
+          <img src="img/equipo/dev.jpg" alt="" class="img-thumbnail rounded">
           <i class="d-block text-secondary">Geral R Cotrina</i>
           <i class="d-block text-secondary text-italic"> <small> Colaborador</small></i>
         </div>     
